--- a/assets/style.css
+++ b/assets/style.css
@@ -652,6 +652,18 @@ footer.nb-footer .copyright p {
 .wrapper-tab .content-tab {
   background: #fff;
 }
+.content-overview fieldset {
+  border: 3px solid #dee2e6 !important;
+  padding: 22px !important;
+}
+.content-overview p {
+  margin-top: 19px;
+  margin-bottom: 19px;
+}
+.content-overview fieldset legend {
+  margin-left: 30px;
+  font-weight: 600;
+}
 .content-overview,
 .content-indepth {
   padding-bottom: 60px;
@@ -665,6 +677,15 @@ footer.nb-footer .copyright p {
 .content-overview ul,
 .content-indepth ul {
   padding-left: 20px;
+}
+.tab_content .content-indepth h3,
+.tab_content .content-indepth h2 {
+  font-weight: 600;
+  padding-top: 30px;
+}
+.tab_content .content-indepth p {
+  margin-top: 19px;
+  margin-bottom: 19px;
 }
 .page_updated {
   padding-top: 60px;
@@ -782,7 +803,7 @@ footer.nb-footer .copyright p {
   width: 300px;
   top: 0px;
   left: -350px;
-  padding: 50px;
+  padding: 50px 20px 20px 20px;
   z-index: 2;
   background: rgba(0, 0, 0, 0.4);
   list-style-type: none;
@@ -794,10 +815,7 @@ footer.nb-footer .copyright p {
 
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 }
-.tab_content .content-indepth h2 {
-  font-weight: 600;
-  padding-top: 30px;
-}
+
 #menu-tab li {
   padding: 5px 0;
   font-size: 22px;
