--- a/assets/style.css
+++ b/assets/style.css
@@ -1037,3 +1037,6 @@ footer.nb-footer .copyright p {
 .related-news-comets {
   background-color: #e0e7ef;
 }
+.related-news-venus {
+  background-color: #fdf8ec;
+}
