--- a/assets/style.css
+++ b/assets/style.css
@@ -575,6 +575,12 @@ footer.nb-footer .copyright p {
   font-size: 16px;
   font-weight: 600;
 }
+.more-bar-venus {
+  background-color: #f6bb2b;
+}
+.more-bar-comets {
+  background-color: #e0e7ef;
+}
 .more-bar a {
   color: #000;
 }
@@ -597,6 +603,10 @@ footer.nb-footer .copyright p {
 .wrapper-tab {
   width: 100%;
   background-color: #f9eae2;
+}
+.wrapper-tab-comets {
+  background-color: #d1dde6 !important;
+  color: #285978 !important;
 }
 
 .tabs ul {
@@ -651,6 +661,13 @@ footer.nb-footer .copyright p {
   opacity: 1;
   width: 100%;
   left: 0;
+}
+/**/
+.wrapper-tab-comets li:after {
+  background: #285978 !important;
+}
+.wrapper-tab-comet li:hover:after {
+  background: #285978 !important;
 }
 .wrapper-tab .content-tab {
   background: #fff;
