--- a/assets/style.css
+++ b/assets/style.css
@@ -700,7 +700,7 @@ footer.nb-footer .copyright p {
   margin-bottom: 19px;
 }
 .content-overview fieldset legend {
-  margin-left: 30px;
+  text-align: center;
   font-weight: 600;
 }
 .content-gallery,
