--- a/assets/style.css
+++ b/assets/style.css
@@ -319,6 +319,12 @@ nav .content .links li .active-menu::after {
     padding-left: 10% !important;
     padding-right: 10% !important;
   }
+  .related-news .carousel-item p {
+    font-size: 12px !important;
+  }
+  .related-news .carousel-item .box-content p {
+    display: none !important;
+  }
 }
 
 @media screen and (max-width: 400px) {
@@ -1116,7 +1122,6 @@ footer.nb-footer .copyright p {
 .related-news .carousel-item p {
   color: #3a3a3a;
   font-size: 18px;
-  font-weight: 600;
 }
 .related-news .carousel-item a:hover {
   text-decoration: none;
@@ -1146,3 +1151,61 @@ footer.nb-footer .copyright p {
   text-transform: uppercase;
   font-size: 30px;
 }
+/* hover-carousel */
+.box:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  transition: all 0.5s ease 0s;
+}
+.box:hover:before {
+  opacity: 1;
+}
+.box {
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  color: #fff;
+}
+.box:after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 170%;
+  top: 0;
+  transform: skewX(45deg);
+  transition: all 1s ease 0s;
+  background-color: #dcdcdc;
+  z-index: 1;
+}
+.box:hover:after {
+  left: -170%;
+  top: 0;
+}
+.box img {
+  width: 100%;
+  height: auto;
+}
+.box .box-content {
+  position: absolute;
+  bottom: -500%;
+  left: 0;
+  width: 100%;
+  transition: all 0.5s ease 0s;
+}
+.box-content p {
+  color: #fff !important;
+  font-size: 12px !important;
+  font-weight: 500 !important;
+}
+
+.box:hover .box-content {
+  top: 40%;
+}
+/*hover-carousel*/
