--- a/assets/style.css
+++ b/assets/style.css
@@ -733,9 +733,13 @@ footer.nb-footer .copyright p {
 
 .content-gallery {
   padding-top: 50px;
+  background: #f8f8f8;
 }
 .content-gallery .row {
   margin: 0;
+}
+.content-gallery h1 {
+  text-align: center !important;
 }
 .content-overview h3,
 .content-overview h2 {
